--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "pastebin-js": "^1.0.6",
     "express": "^4.18.1",
     "path": "^0.12.7",
-    "dotenv": "^16.3.1"  // ADD THIS LINE
+    "dotenv": "^16.3.1" 
    }
 }
