--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "start": "node itxxwasi.js",
         "autopair": "node autopair.js",
-        "dev": "node autopair.js"
+        "dev": "node itxxwasi.js"
     },
     "author": "WasiTech",
     "license": "GPL-3.0 license",
